<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageButton
                        android:layout_width="350dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/fiestas_patrias"
                        android:id="@+id/btnFCivicaDetalle"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Descripcion1"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_marginTop="15dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Lugar"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Fecha"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Clima"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"
                        />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="right|center_vertical"
        android:background="#80000000">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/btnMenu"
            android:src="@drawable/list_img"
            />

    </LinearLayout>

</RelativeLayout>