<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_weight="0.2"
        android:layout_height="0dp"
        android:text="Bienvenido"
        android:textSize="40sp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.7"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="15dp"

        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:textColorHint="@color/grayLithg"
            android:textSize="25sp"
            android:layout_marginBottom="5dp"
            android:id="@+id/txtEmail"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:textColorHint="@color/grayLithg"
            android:inputType="textPassword"
            android:textSize="25sp"
            android:layout_marginBottom="5dp"
            android:id="@+id/txtPassword"

            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/btn_login"
            android:gravity="center"
            android:id="@+id/btnIniciarSesion"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.15"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:background="@color/fondoFooter"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/btnRecuperar"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_footer"
            android:id="@+id/btnRecuperarPassword"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/registrarse"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/btn_footer"
            android:id="@+id/btnRegistrarse"
            />
    </LinearLayout>

</LinearLayout>
