<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/fiestas_patrias"
                        android:id="@+id/btnFCivica1"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Fcivica1"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/alto_alianza_tacna"
                        android:id="@+id/btnFCivica2"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Fcivica2"
                        android:textSize="20sp"
                        android:textAlignment="center"

                        />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/batalla_ayachucho"
                        android:id="@+id/btnFCivica3"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Fcivica3"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/aniv_callao"
                        android:id="@+id/btnFCivica4"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Fcivica4"
                        android:textSize="20sp"
                        android:textAlignment="center"

                        />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/semanachilcano"
                        android:id="@+id/btnFCivica5"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Fcivica5"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/f_civicas"
                        android:id="@+id/btnFCivica6"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Fcivica6"
                        android:textSize="20sp"
                        android:textAlignment="center"

                        />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="right|center_vertical"
        android:background="#80000000">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/btnMenu"
            android:src="@drawable/list_img"
            />

    </LinearLayout>

</RelativeLayout>