<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/fest11_200x200"
                        android:id="@+id/btnFCivicas"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo1"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/fest9_200x200"
                        android:id="@+id/btnFReligiosa"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo2"
                        android:textSize="20sp"
                        android:textAlignment="center"

                        />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/fest12_200x200"
                        android:id="@+id/btnFDepartamento"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo3"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/fest8_200x200"
                        android:id="@+id/btnFMes"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo4"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/fgastronomicas"
                        android:id="@+id/btnFGastronomica"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo5"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/fest3_200x200"
                        android:id="@+id/btnFavoritos"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo6"
                        android:textSize="20sp"
                        android:textAlignment="center"

                        />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
   </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="right|center_vertical"
        android:background="#80000000">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/btnMenu"
            android:src="@drawable/list_img"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="right|center_vertical"
        android:background="#80000000">

        <Button
            android:id="@+id/button1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="¡Comprar!"
            android:background="@drawable/btn_login"
            android:textStyle="bold"
            android:textColor="#ffffff" />
    </LinearLayout>
</RelativeLayout>